# EVRP

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  evrp_plan.md
include/: car.h  car.hpp  charger_profile.hpp  edge.h  edge.hpp  graph.h  graph.hpp  label.hpp  node.h  node.hpp  router.hpp  utils.hpp
src/: car.cpp  edge.cpp  graph.cpp  label.cpp  main.cpp  node.cpp  router.cpp
src/algorithm/: main.cpp
src/algorithm/common/: car.cpp  edge.cpp  node.cpp
src/algorithm/graph/: graph.cpp
src/algorithm/router/: label.cpp  router.cpp
src/algorithm/utils/: utils.cpp
src/backend/: app.py  backend.py  charger.py  config.yaml  edge.py  main.py  ocm.py  osrm.py  routing_request.py  routing_response.py  waypoint.py
src/backend/bindings/: bindings.cpp
src/backend/graph/: charger.py  edge.py
src/backend/services/: osm.py  osrm.py
src/common/: car.cpp  charger_profile.cpp  edge.cpp  node.cpp
src/frontend/evrp-frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
src/frontend/evrp-frontend/src/: index.html
src/frontend/evrp-frontend/src/app/: api.service.ts  app.component.css  app.component.html  app.component.ts  app.module.ts  global.service.ts
src/frontend/evrp-frontend/src/app/map/: map.component.css  map.component.html  map.component.ts
src/frontend/evrp-frontend/src/app/routing-request/: routing-request.component.css  routing-request.component.html  routing-request.component.ts
src/graph/: graph.cpp
src/router/: router.cpp
src/utils/: utils.cpp
testing/: car_test.cpp  charger_test.cpp  edge_test.cpp  graph_test.cpp  router_test.cpp  test.cpp
testing/include/: custom_macros.hpp  testcase.hpp
testing/testcases/: graph_cases.cpp  graph_cases.hpp
